[package]
name = "img"
version = "0.1.0"
authors = ["zomatree"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "img"
path = "src/lib.rs"

[dependencies]
pest = "2.0"
pest_derive = "2.0"
photon-rs = "0.3.1"
clap = "2.33.3"
